// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkout() should return an object with the total and the list of items 1`] = `
{
  "items": [
    {
      "product": {
        "price": 35388,
        "title": "Adidas Running - Men",
      },
      "quantity": 2,
    },
    {
      "product": {
        "price": 41872,
        "title": "Adidas Running - Women",
      },
      "quantity": 3,
    },
  ],
  "total": 196392,
}
`;

exports[`Cart checkout() should return an object with the total and the list of items when summary() is called 1`] = `
{
  "formatted": "R$3,025.56",
  "items": [
    {
      "product": {
        "price": 35388,
        "title": "Adidas Running - Men",
      },
      "quantity": 5,
    },
    {
      "product": {
        "price": 41872,
        "title": "Adidas Running - Women",
      },
      "quantity": 3,
    },
  ],
  "total": {
    "amount": 302556,
    "currency": "BRL",
    "precision": 2,
  },
}
`;
